# vx-stream-obs

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/actions/run-clang-format/: action.yaml
.github/workflows/: build-project.yaml  push.yaml
data/themes/: Valerix.ovt
installer/: vxstream-installer.nsi
src/: plugin-main.cpp  vx-backup.cpp  vx-backup.hpp  vx-docks.cpp  vx-docks.hpp  vx-ms-dock.cpp  vx-ms-dock.hpp  vx-multistream-dialog.cpp  vx-multistream-dialog.hpp  vx-multistream.cpp  vx-multistream.hpp  vx-platform-logo.cpp  vx-platform-logo.hpp  vx-scenes.cpp  vx-scenes.hpp  vx-theme.cpp  vx-theme.hpp  vx-updater.cpp  vx-updater.hpp  vx-vertical-dock.cpp  vx-vertical-dock.hpp  vx-vertical.cpp  vx-vertical.hpp
